# Structured-and-Object-Oriented-Programming

C_(basic)/BABSQRT/: CMakeLists.txt  main.c
C_(basic)/BOX/: CMakeLists.txt  main.c
C_(basic)/CASH_DG/: CMakeLists.txt  main.c
C_(basic)/CHAR_DG/: CMakeLists.txt  main.c
C_(basic)/CHG/: CMakeLists.txt  main.c
C_(basic)/DIGSUM/: CMakeLists.txt  main.c
C_(basic)/DIS/: CMakeLists.txt  main.c
C_(basic)/DISP-BOX/: CMakeLists.txt  main.c
C_(basic)/EVEN/: main.c
C_(basic)/EXPRESSION/: main.c
C_(basic)/FACT/: CMakeLists.txt  main.c
C_(basic)/FACT-FUN/: CMakeLists.txt  main.c
C_(basic)/GREET/: CMakeLists.txt  main.c
C_(basic)/IF-1/: CMakeLists.txt  main.c
C_(basic)/INRANGE-1/: main.c
C_(basic)/INRANGE-2/: CMakeLists.txt  main.c
C_(basic)/IS-SQUARE/: CMakeLists.txt  main.c
C_(basic)/IS-TRIANGLE/: CMakeLists.txt  main.c
C_(basic)/LOGOP-1/: CMakeLists.txt  main.c
C_(basic)/MAX/: CMakeLists.txt  main.c
C_(basic)/MAX1D/: CMakeLists.txt  main.c
C_(basic)/MEAN/: CMakeLists.txt  main.c
C_(basic)/OFF/: CMakeLists.txt  main.c
C_(basic)/PRI/: CMakeLists.txt  main.c
C_(basic)/PRIME/: CMakeLists.txt  main.c
C_(basic)/RAND-ARR/: CMakeLists.txt  main.c
C_(basic)/REV/: CMakeLists.txt  main.c
C_(basic)/SQEQ/: CMakeLists.txt  main.c
C_(basic)/SQEQ-FUN/: CMakeLists.txt  main.c
C_(basic)/SQUARE/: CMakeLists.txt  main.c
C_(basic)/STAIRS/: CMakeLists.txt  main.c
C_(basic)/STATS_DG/: main.c
C_(basic)/SUM/: main.c
C_(basic)/SUM1D/: CMakeLists.txt  main.c
C_(basic)/SUM2D-1/: CMakeLists.txt  main.c
C_(basic)/SUM2D-2/: CMakeLists.txt  main.c
C_(basic)/WDN/: CMakeLists.txt  main.c
C_(basic)/conditional_compilation_dg/: main.c
C_(basic)/conditionals/: main.c
C_(basic)/custom_types/: main.c
C_(basic)/literals_dg/: main.c
C_(basic)/loops/: main.c
C_(basic)/pointers/: CMakeLists.txt
Cpp/: SetCommonConfig.cmake
Cpp/catalogue-1/: CMakeLists.txt
Cpp/catalogue-1/include/: catalogue.hpp
Cpp/catalogue-1/src/: catalogue.cpp
Cpp/catalogue-1/test/: main_gtest.cpp  test_catalogue.cpp  test_product.cpp
Cpp/complex-1/: CMakeLists.txt
Cpp/complex-1/include/: complex.hpp
Cpp/complex-1/src/: complex.cpp
Cpp/matlab-1/: main.cpp
Cpp/matlab-4/: main.cpp
Cpp/matlab-7/: CMakeLists.txt
Cpp/matlab-8/: main.cpp
Cpp/practice/: CMakeLists.txt  main.cpp
Cpp/shapes-1/: CMakeLists.txt
Cpp/shapes-2/: CMakeLists.txt
Cpp/vehicles-3/: CMakeLists.txt
Cpp/vehicles-3/include/: vehicles.hpp
Cpp/vehicles-3/src/: vehicles.cpp
Cpp/vehicles-3/test/: test_driver.cpp  test_vehicles.cpp
(+51 files in other folders)
